--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
   "extends": ["config:base"]
-  "schedule": ["at 11:15 every day"],
-  "timezone": "UTC"
+  "schedule": ["at 13:25 every day"],
+  "timezone": "Europe/Berlin"
 }
